# routes/api.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Route;
 use Modules\Academic\Http\Controllers\Api\V1\ReportCardsController;
 use Modules\Academic\Http\Controllers\Api\V1\StudentAcademicsController;
 use Modules\Academic\Http\Controllers\Api\V1\TeacherAttendanceController;
+use Modules\Boarding\Http\Controllers\Api\V1\GuardianExeatsController;
 use Modules\Comms\Http\Controllers\Api\V1\DevicesController;
 use Modules\Comms\Http\Controllers\Api\V1\InboxController;
 use Modules\Comms\Http\Controllers\Api\V1\NoticesController;
@@ -69,6 +70,10 @@ Route::middleware(['serp.api', 'throttle:120,1'])->group(function (): void {
     Route::get('teacher/classes', [TeacherAttendanceController::class, 'classes'])->middleware('serp.token-ability:attendance.mark');
     Route::get('teacher/classes/{class}/attendance', [TeacherAttendanceController::class, 'register'])->middleware('serp.token-ability:attendance.mark');
     Route::post('teacher/classes/{class}/attendance', [TeacherAttendanceController::class, 'mark'])->middleware('serp.token-ability:attendance.mark');
+
+    Route::get('exeat-types', [GuardianExeatsController::class, 'types'])->middleware('serp.token-ability:exeats.read');
+    Route::get('students/{student}/exeats', [GuardianExeatsController::class, 'index'])->middleware('serp.token-ability:exeats.read');
+    Route::post('students/{student}/exeats', [GuardianExeatsController::class, 'store'])->middleware(['serp.token-ability:exeats.request', 'serp.idempotent']);
 
     Route::get('communications/inbox', [InboxController::class, 'index'])->middleware('serp.token-ability:notices.read');
     Route::post('communications/inbox/{notification}/read', [InboxController::class, 'read'])->middleware('serp.token-ability:notices.read');
